--- a/app/src/main/res/layout/sticky_note.xml
+++ b/app/src/main/res/layout/sticky_note.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Checklist layout to be placed in the CardView -->
+<!-- StickyNote layout to be placed in the CardView -->
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
