--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,11 +32,11 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_view"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="96dp"
+        android:scrollbars="vertical"
         app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_text">
-    </android.support.v7.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@+id/title_text"></android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
