--- a/app/src/main/res/layout/sticky_note.xml
+++ b/app/src/main/res/layout/sticky_note.xml
@@ -16,24 +16,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/sticky_top"/>
 
         <EditText
             android:id="@+id/stickyText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
             android:inputType="text"
             app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/stickyTop" />
+            app:layout_constraintTop_toBottomOf="@id/stickyTop"
+            android:background="#F4F382"/>
 
         <ImageView
             android:id="@+id/stickyBot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/stickyText" />
+            app:layout_constraintTop_toBottomOf="@id/stickyText"
+            android:src="@drawable/sticky_bottom"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
