--- a/app/src/main/res/layout/sticky_note.xml
+++ b/app/src/main/res/layout/sticky_note.xml
@@ -4,7 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +19,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/sticky_top"/>
+            android:src="@drawable/sticky_top"
+            android:scaleType="centerCrop"/>
 
         <EditText
             android:id="@+id/stickyText"
@@ -34,7 +37,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/stickyText"
-            android:src="@drawable/sticky_bottom"/>
+            android:src="@drawable/sticky_bottom"
+            android:scaleType="centerCrop"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
