"fix up recyclerview"

--- a/app/src/main/res/layout/sticky_note.xml
+++ b/app/src/main/res/layout/sticky_note.xml
@@ -14,31 +14,30 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/stickyTop"
+            android:id="@+id/sticky_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/sticky_top"
-            android:scaleType="centerCrop"/>
+            app:layout_constraintTop_toTopOf="parent" />
+            <!--android:src="@drawable/sticky_top"
+            android:scaleType="centerCrop"-->
 
-        <EditText
-            android:id="@+id/stickyText"
+        <TextView
+            android:id="@+id/sticky_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
             app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/stickyTop"
-            android:background="#F4F382"/>
+            app:layout_constraintTop_toBottomOf="@id/sticky_top"/>
+
 
         <ImageView
-            android:id="@+id/stickyBot"
+            android:id="@+id/sticky_bot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/stickyText"
-            android:src="@drawable/sticky_bottom"
-            android:scaleType="centerCrop"/>
+            app:layout_constraintTop_toBottomOf="@id/sticky_text"/>
+            <!--android:src="@drawable/sticky_bottom"
+            android:scaleType="centerCrop"/> -->
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
