Adds editTexts to sticky_edit, creates string file, adds sticky color

--- a/app/src/main/res/layout/sticky_note.xml
+++ b/app/src/main/res/layout/sticky_note.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintRight_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/sticky_top"
-            android:background="#F4F382"/>
+            android:background="@color/colorSticky"/>
 
         <ImageView
             android:id="@+id/sticky_bot"
