adds broken item hold functionality

--- a/app/src/main/res/layout/sticky_edit.xml
+++ b/app/src/main/res/layout/sticky_edit.xml
@@ -27,10 +27,8 @@
 
     <EditText
         android:id="@+id/title_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:inputType="textMultiLine|textCapSentences"
         android:text="@string/title"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,11 +37,9 @@
 
     <EditText
         android:id="@+id/body_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine|textCapSentences"
         android:text="@string/body"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_text"
