--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,6 @@
         android:layout_marginTop="96dp"
         android:scrollbars="vertical"
         app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_text"></android.support.v7.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@+id/title_text"/>
 
 </android.support.constraint.ConstraintLayout>
