--- a/app/src/main/res/layout/sticky_edit.xml
+++ b/app/src/main/res/layout/sticky_edit.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/sticky_top"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/sticky_top"
-        android:scaleType="centerCrop"/>
+    android:layout_height="match_parent"
+    android:background="@color/transparent">
 
     <Button
         android:id="@+id/back_button"
@@ -22,8 +14,15 @@
         android:layout_marginStart="136dp"
         android:layout_marginTop="8dp"
         android:text="@string/back_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_weight="0" />
+
+    <ImageView
+        android:id="@+id/sticky_top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/sticky_top"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"/>
 
     <EditText
         android:id="@+id/title_text"
@@ -31,8 +30,6 @@
         android:layout_height="wrap_content"
         android:inputType="textMultiLine|textCapSentences"
         android:text="@string/title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_button"
         android:background="@color/colorSticky"/>
 
     <EditText
@@ -41,16 +38,15 @@
         android:layout_height="wrap_content"
         android:inputType="textMultiLine|textCapSentences"
         android:text="@string/body"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_text"
-        android:background="@color/colorSticky"/>
+        android:background="@color/colorSticky"
+        android:layout_weight="1"/>
+
     <ImageView
         android:id="@+id/sticky_bot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/sticky_bottom"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
