--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorSticky">#F4F382</color>
+    <color name="transparent">#00000000</color>
+    <color name="white"></color>
 </resources>
