--- a/app/src/main/res/layout/sticky_edit.xml
+++ b/app/src/main/res/layout/sticky_edit.xml
@@ -16,30 +16,45 @@
         android:text="@string/back_button"
         android:layout_weight="0" />
 
-    <ImageView
-        android:id="@+id/sticky_top"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/sticky_top"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"/>
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/title_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine|textCapSentences"
-        android:text="@string/title"
-        android:background="@color/colorSticky"/>
+        <ImageView
+            android:id="@+id/sticky_top"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/sticky_top"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:layout_gravity="top"/>
+
+        <EditText
+            android:id="@+id/title_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:textSize="32sp"
+            android:inputType="textMultiLine|textCapSentences"
+            android:text="@string/title"
+            android:background="@color/colorSticky"
+            android:layout_gravity="bottom"/>
+
+    </FrameLayout>
 
     <EditText
         android:id="@+id/body_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textMultiLine|textCapSentences"
+        android:paddingHorizontal="12dp"
+        android:textAlignment="gravity"
+        android:gravity="top"
+        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
         android:text="@string/body"
         android:background="@color/colorSticky"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:imeOptions=""/>
 
     <ImageView
         android:id="@+id/sticky_bot"
