--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorSticky">#F4F382</color>
     <color name="transparent">#00000000</color>
     <color name="white"></color>
+    <color name="hintText">#80000000</color>
 </resources>
