--- a/app/src/main/res/layout/check_edit.xml
+++ b/app/src/main/res/layout/check_edit.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent">
+    android:background="@color/transparent"
+    android:id="@+id/check_note">
 
     <Button
         android:id="@+id/check_back"
