--- a/app/src/main/res/layout/check_edit.xml
+++ b/app/src/main/res/layout/check_edit.xml
@@ -43,14 +43,15 @@
             android:layout_gravity="end|bottom" />
     </FrameLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:id="@+id/check_list"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_check"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
         android:onClick="addCheck"
-        android:background="@color/hintText"/>
+        android:background="@color/hintText">
+        <include layout="@layout/check_plus"/>
+    </androidx.recyclerview.widget.RecyclerView>
 
     <ImageView
         android:id="@+id/check_bot"
