--- a/app/src/main/res/layout/check_plus.xml
+++ b/app/src/main/res/layout/check_plus.xml
@@ -2,18 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:paddingHorizontal="16dp">
 
     <CheckBox
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:layout_width="24dp"
         android:id="@+id/check"
-        android:button="@drawable/temp"/>
+        android:button="@drawable/temp"
+        android:onClick="addCheck"/>
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/check_text"
-        android:hint="@string/check_hint"
+        android:text="@string/check_plus_hint"
+        android:enabled="false"
         android:layout_weight="1"/>
 </LinearLayout>
