--- a/app/src/main/res/layout/sticky_note.xml
+++ b/app/src/main/res/layout/sticky_note.xml
@@ -24,7 +24,7 @@
             android:scaleType="centerCrop"/>
 
         <TextView
-            android:id="@+id/sticky_text"
+            android:id="@+id/note_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintRight_toLeftOf="parent"
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/sticky_text"
+            app:layout_constraintTop_toBottomOf="@id/note_text"
             android:src="@drawable/sticky_bottom"
             android:scaleType="centerCrop"/>
     </LinearLayout>
