--- a/app/src/main/res/layout/event_edit.xml
+++ b/app/src/main/res/layout/event_edit.xml
@@ -1,94 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/event_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="136dp"
         android:layout_marginTop="8dp"
+        android:layout_weight="0"
         android:text="@string/back_button"
-        android:layout_weight="0" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
+        android:id="@+id/event_frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:id="@+id/event_frame"
-        app:layout_constraintTop_toTopOf="@id/event_back"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@id/event_back">
 
         <ImageView
             android:id="@+id/event_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/sticky_top"
-            android:scaleType="centerCrop"
+            android:layout_gravity="top|start"
             android:adjustViewBounds="true"
-            android:layout_gravity="top|start"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/sticky_top" />
 
         <EditText
             android:id="@+id/event_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="32sp"
+            android:layout_gravity="center_vertical|end"
             android:layout_marginLeft="125dp"
-            android:inputType="textCapSentences"
-            android:hint="@string/event_title_hint"
-            android:textColorHint="@color/hintText"
             android:background="@color/colorSticky"
-            android:layout_gravity="center_vertical|end"/>
+            android:hint="@string/event_title_hint"
+            android:inputType="textCapSentences"
+            android:textColorHint="@color/hintText"
+            android:textSize="32sp" />
 
     </FrameLayout>
 
     <LinearLayout
+        android:id="@+id/event_start_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/event_frame"
-        android:id="@+id/event_start_layout">
+        android:padding="4dp"
+        app:layout_constraintTop_toBottomOf="@id/event_frame">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/event_start"/>
-
-        <com.google.android.material.textfield.TextInputLayout
+            android:text="@string/event_start" />
+        <Button
             android:id="@+id/event_start1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight=".4">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/event_date" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
+            android:layout_weight=".4"
+            android:text="@string/event_date"/>
+        <Button
             android:id="@+id/event_start2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight=".6">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/event_time" />
-        </com.google.android.material.textfield.TextInputLayout>
+            android:layout_weight=".3"
+            android:text="@string/event_time"/>
     </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/event_location"
-        app:layout_constraintTop_toBottomOf="@+id/event_start_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/event_start_layout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -98,9 +88,10 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/event_description"
-        app:layout_constraintTop_toBottomOf="@+id/event_location"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/event_location">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -108,14 +99,33 @@
             android:hint="@string/event_description" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/event_description">
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/pick_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="showDatePickerDialog"
+            android:text="Pick date" />
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/event_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:src="@drawable/sticky_bottom"
+        android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:adjustViewBounds="true"/>
+        android:src="@drawable/sticky_bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
