--- a/app/src/main/res/layout/event_edit.xml
+++ b/app/src/main/res/layout/event_edit.xml
@@ -83,7 +83,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/event_location" />
+            android:hint="@string/event_location"
+            android:id="@+id/event_location_text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -96,27 +97,17 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/event_description" />
+            android:hint="@string/event_description"
+            android:id="@+id/event_description_text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LinearLayout
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/event_description">
-
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/pick_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="showDatePickerDialog"
-            android:text="Pick date" />
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/event_description"
+        android:id="@+id/event_create"
+        android:onClick="createEvent"
+        android:text="@string/event_create"/>
 
     <ImageView
         android:id="@+id/event_bottom"
