--- a/app/src/main/res/layout/check_edit.xml
+++ b/app/src/main/res/layout/check_edit.xml
@@ -3,33 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent"
+    android:background="@color/check"
     android:id="@+id/check_edit"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <Button
-        android:id="@+id/check_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/back_button"
-        android:layout_weight="0" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/check_frame"
-        app:layout_constraintTop_toBottomOf="@+id/check_back"
+        app:layout_constraintTop_toTopOf="parent"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/sticky_top"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/sticky_top"
+            android:src="@drawable/check_top_big"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:layout_gravity="start|top"/>
@@ -43,8 +32,18 @@
             android:inputType="textCapSentences"
             android:hint="@string/title"
             android:textColorHint="@color/hintText"
-            android:background="@color/colorSticky"
+            android:background="@color/check"
             android:layout_gravity="end|bottom" />
+        <Button
+            android:id="@+id/check_back"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="24dp"
+            android:translationZ="0dp"
+            android:padding="2dp"
+            android:text="Back"
+            android:background="@color/check"
+            android:layout_gravity="right|center_vertical"/>
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -53,7 +52,7 @@
         android:layout_height="10dp"
         app:layout_constraintTop_toBottomOf="@+id/check_frame"
         android:scrollbars="vertical"
-        android:background="@color/hintText"
+        android:background="@color/check"
         android:layout_weight="1"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -64,14 +63,16 @@
         android:id="@+id/check_fab"
         android:onClick="addCheck"
         app:fabSize="auto"
-        android:layout_margin="24dp"/>
+        android:layout_margin="24dp"
+        app:srcCompat="@android:drawable/ic_menu_add"
+        />
 
     <ImageView
         android:id="@+id/check_bot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/sticky_bottom"
+        android:src="@drawable/check_bot_big"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
