--- a/app/src/main/res/layout/check_note.xml
+++ b/app/src/main/res/layout/check_note.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/sticky_top"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/sticky_top"
+                android:src="@drawable/check_top_small"
                 android:scaleType="centerCrop"
                 android:adjustViewBounds="true"
                 android:layout_gravity="top|start"/>
@@ -32,17 +32,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
-                android:layout_marginLeft="65dp"
-                android:layout_marginTop="-8dp"
                 android:hint="@string/title"
+                android:layout_marginTop="5dp"
+                android:padding="4dp"
                 android:textColorHint="@color/hintText"
-                android:background="@color/colorSticky"
-                android:layout_gravity="center_vertical|end"/>
+                android:background="@color/check"
+                android:layout_gravity="center"/>
         </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-4dp"
             android:id="@+id/mini_check_list"
             android:orientation="vertical"/>
 
@@ -53,7 +54,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/note_title"
-            android:src="@drawable/sticky_bottom"
+            android:src="@drawable/check_bot_small"
             android:scaleType="centerCrop"/>
     </LinearLayout>
 
