--- a/app/src/main/res/layout/event_edit.xml
+++ b/app/src/main/res/layout/event_edit.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent"
+    android:background="@color/event"
     android:orientation="vertical">
 
     <Button
         android:id="@+id/event_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="8dp"
-        android:layout_weight="0"
-        android:text="@string/back_button"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
+        android:width="40dp"
+        android:height="40dp"
+        android:background="@color/event"
+        android:text="Back"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,15 +34,16 @@
             android:layout_gravity="top|start"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/sticky_top" />
+            android:src="@drawable/event_top_big" />
 
         <EditText
             android:id="@+id/event_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
-            android:layout_marginLeft="125dp"
-            android:background="@color/colorSticky"
+            android:layout_marginLeft="260dp"
+            android:layout_marginTop="-32dp"
+            android:background="@color/event"
             android:hint="@string/event_title_hint"
             android:inputType="textCapSentences"
             android:textColorHint="@color/hintText"
@@ -135,7 +138,7 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/sticky_bottom"
+        android:src="@drawable/event_bot_big"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
