--- a/app/src/main/res/layout/event_note.xml
+++ b/app/src/main/res/layout/event_note.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/sticky_top"
+                android:src="@drawable/event_top_small"
                 android:scaleType="centerCrop"/>
 
             <TextView
@@ -31,7 +31,9 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:textSize="24sp"
-                android:padding="16dp"
+                android:layout_marginStart="14dp"
+                android:padding="4dp"
+                android:textColor="#000000"
                 android:id="@+id/event_note_date"/>
 
             <TextView
@@ -39,7 +41,11 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:padding="16dp"
+                android:textSize="24sp"
+                android:textColor="#000000"
+                android:layout_marginTop="-20dp"
+                android:layout_marginRight="10dp"
+                android:padding="4dp"
                 android:id="@+id/event_note_time"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -48,9 +54,12 @@
             android:id="@+id/note_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginTop="-12dp"
+            android:paddingHorizontal="8dp"
             app:layout_constraintRight_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/event_top"
-            android:background="@color/colorPrimary"/>
+            android:background="@color/event"/>
 
         <ImageView
             android:id="@+id/event_bot"
@@ -58,7 +67,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/note_title"
-            android:src="@drawable/sticky_bottom"
+            android:src="@drawable/event_bot_small"
             android:scaleType="centerCrop"/>
     </LinearLayout>
 
