--- a/app/src/main/res/layout/goal_edit.xml
+++ b/app/src/main/res/layout/goal_edit.xml
@@ -4,22 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/transparent"
+    android:background="@color/goal"
     android:orientation="vertical"
     tools:context=".GoalEditActivity"
     android:id="@+id/goal_main">
-
-    <Button
-        android:id="@+id/goal_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="8dp"
-        android:layout_weight="0"
-        android:text="@string/back_button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="createGoal"/>
 
     <FrameLayout
         android:id="@+id/goal_frame"
@@ -27,7 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/goal_back">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/goal_top"
@@ -36,7 +24,7 @@
             android:layout_gravity="top|start"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/sticky_top" />
+            android:src="@drawable/goal_top_big" />
 
         <EditText
             android:id="@+id/goal_title"
@@ -44,11 +32,23 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
             android:layout_marginLeft="125dp"
-            android:background="@color/colorSticky"
+            android:background="@color/goal"
             android:hint="@string/goal_title"
             android:inputType="textCapSentences"
             android:textColorHint="@color/hintText"
             android:textSize="32sp" />
+
+        <Button
+            android:id="@+id/goal_back"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="24dp"
+            android:translationZ="0dp"
+            android:padding="2dp"
+            android:text="Back"
+            android:background="@color/goal"
+            android:onClick="createGoal"
+            android:layout_gravity="right|center_vertical"/>
 
     </FrameLayout>
 
@@ -111,7 +111,7 @@
             android:id="@+id/goal_runner"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/temp"
+            android:src="@drawable/runner"
             android:contentDescription="@string/goal_date"/>
         <ImageView
             android:layout_width="56dp"
@@ -122,7 +122,7 @@
             android:layout_gravity="end"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/temp"
+            android:src="@drawable/finish_line"
             android:contentDescription="@string/goal_date"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -140,7 +140,7 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/sticky_bottom"
+        android:src="@drawable/goal_bot_big"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
